--- a/sass/_blog.scss
+++ b/sass/_blog.scss
@@ -30,12 +30,12 @@
       margin-bottom: 20px;
       padding: 20px;
       transition: all 0.2s ease-in-out;
-      box-shadow: 0px 3px 3px rgba(#000, .1) ;
-      padding-bottom: 40px;
+      box-shadow: 0px 3px 3px rgba(#000, .2) ;
+      border-radius: 17px;
       @include media($tablet) {
-        // border-radius: 10px;
         margin-bottom: 80px;
         padding: 20px;
+        padding-bottom: 30px;
         width: 30%;
         &:hover {
           box-shadow: 0px 3px 7px rgba(#000, .3) ;
