--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -244,10 +244,10 @@ form {
 }
 
 .footer-signup {
-  padding-left: 40px;
-  padding-right: 40px;
+  // padding-left: 40px;
+  // padding-right: 40px;
   margin: 0 auto;
-  margin-top: 40px;
+  // margin-top: 40px;
   max-width: 500px;
 }
 
@@ -320,7 +320,7 @@ form {
    div {
     margin: 0 auto;
     max-width: 600px;
-    // padding: 20px;
+    padding: 20px;
     background: rgba(#000, 0.5);
   }
   h2 {
