--- a/sass/_blog.scss
+++ b/sass/_blog.scss
@@ -31,8 +31,8 @@
       padding: 20px;
       transition: all 0.2s ease-in-out;
       box-shadow: 0px 3px 3px rgba(#000, .2) ;
-      border-radius: 17px;
       @include media($tablet) {
+        border-radius: 17px;
         margin-bottom: 80px;
         padding: 20px;
         padding-bottom: 30px;
@@ -49,11 +49,11 @@
         }
       }
       .para a {
-        font-family: $secondaryFont;
+        font-family: $highlightFont;
         text-decoration: none !important;
         color: #000;
-        font-size: 16px;
-        line-height: 20px;
+        font-size: 12px;
+        line-height: 18px;
         color: $darkColor;
         span {
           text-decoration: underline;
