--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -181,9 +181,11 @@ form {
   background: #f5f5f5;
   padding: 20px 20px;
   display: flex;
+  flex-wrap: wrap;
   @include media($tablet) {
     padding: 50px 40px;
     justify-content: flex-start;
+    flex-wrap: nowrap;
   }
   @include media($desktop) {
     padding: 50px 100px;
@@ -243,12 +245,25 @@ form {
   }
 }
 
+.footer-nav:nth-of-type(3) {
+  width: 100%;
+  @include media($tablet) {
+    margin-top: 0;
+    max-width: 500px;
+    width: auto;
+  }
+}
+
 .footer-signup {
   // padding-left: 40px;
   // padding-right: 40px;
   margin: 0 auto;
-  // margin-top: 40px;
+  margin-top: 20px;
   max-width: 500px;
+
+  @include media($tablet) {
+    margin-top: 0;
+  }
 }
 
 /*====================================
@@ -363,15 +378,16 @@ form {
   img {
     max-width: 200px;
     margin-left: -20px;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
   }
 }
 
 .schema {
   margin-bottom: 20px;
-  font-size: 14px;
+  font-size: 13px;
+  font-family: $secondaryFont;
   a {
-    color: #000;
+    color: #adb5bd;
   }
 }
 
@@ -396,7 +412,7 @@ form {
   padding: 0 0px;
   font-family: $secondaryFont;
   text-align: center;
-  font-size: 12px;
+  font-size: 11px;
   line-height: 16px;
   color: $tertiaryAlt;
   @include media($tablet) {
