--- a/sass/_front.scss
+++ b/sass/_front.scss
@@ -27,9 +27,9 @@
   z-index: 1000;
   border-bottom: 5px solid #000;
   height: 280px;
-  // background: $darkColor;
-   background: rgb(9,9,121);
-  background: linear-gradient(135deg, rgba(9,9,121,1) 0%, rgba(9,9,121,1) 45%, rgba(2,0,36,1) 99%); 
+  background: #000;
+   // background: rgb(9,9,121);
+  // background: linear-gradient(135deg, rgba(9,9,121,1) 0%, rgba(9,9,121,1) 45%, rgba(2,0,36,1) 99%); 
   @include media($tablet) {
     height: 602px;
   }
@@ -142,9 +142,8 @@
   border: 1px solid $lightColor;
   position: relative;
   a {
-    color: #fff;
     text-decoration: none;
-
+    // background-color: #fff;
   }
   @include media($tablet) {
     margin-top: 30px;
@@ -152,7 +151,9 @@
   }
   &:hover {
     color: $secondaryAlt;
-    border: 1px solid $secondaryAlt;
+    color: #000 !important;
+    border: 1px solid #fff;
+    // border: 1px solid $secondaryAlt;
     background: transparent;
   }
 }
