--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -8,7 +8,7 @@
 
 .tmpl_type_page {
   .content{
-    h1, h2, h3, h4 ,h5, h6, p {
+    h1, h2, h3, h4 ,h5, h6, p, form {
       padding-left: 20px;
       padding-right: 20px;
     }
