--- a/sass/_front.scss
+++ b/sass/_front.scss
@@ -387,45 +387,47 @@ i {
 }
 
 
-.parsed__post {
-  position: fixed;
-  left: -150px;
-  bottom: 80px;
-  width: 150px;
-  border: 2px solid black;
-  background: black;
-  opacity: 0;
-  transition: all .2s ease-in-out;
-  font-size: 10px;
-  line-height: 12px;
-  text-align: left;
-  padding-bottom: 10px;
-  font-weight: 100;
-  z-index: 9999;
-  &.active {
-    opacity: 1;
-    left: 0px;
-  }
-}
+/*NOT USED RIGHT NOW*/
 
-.parsed__post a {
-  overflow: hidden;
-  position: relative;
-  text-align: left;
-  text-decoration: none;
-}
+// .parsed__post {
+//   position: fixed;
+//   left: -150px;
+//   bottom: 80px;
+//   width: 150px;
+//   border: 2px solid black;
+//   background: black;
+//   opacity: 0;
+//   transition: all .2s ease-in-out;
+//   font-size: 10px;
+//   line-height: 12px;
+//   text-align: left;
+//   padding-bottom: 10px;
+//   font-weight: 100;
+//   z-index: 9999;
+//   &.active {
+//     opacity: 1;
+//     left: 0px;
+//   }
+// }
 
-.parsed__post span {
-  font-family: $primaryFont;
-  color: #fff;
-  display: block;
-  padding-left: 5px;
-  padding-right: 5px;
-}
+// .parsed__post a {
+//   overflow: hidden;
+//   position: relative;
+//   text-align: left;
+//   text-decoration: none;
+// }
+
+// .parsed__post span {
+//   font-family: $primaryFont;
+//   color: #fff;
+//   display: block;
+//   padding-left: 5px;
+//   padding-right: 5px;
+// }
 
 
-.parsed__post img {
-  width: 100%;
-  height: auto;
-  padding-bottom: 10px;
-}
+// .parsed__post img {
+//   width: 100%;
+//   height: auto;
+//   padding-bottom: 10px;
+// }
