--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,414 +1,414 @@
 /* Naviagation bar */
 
 .home header {
-    position: relative;
-    z-index: 9999 !important;
-    display: none;
+  position: relative;
+  z-index: 9999 !important;
+  // display: none;
 }
 
 header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 9999 !important;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 9999 !important;
 }
 
 .nav-bar {
-    width: 100%;
-    // max-width: $desktop;
-    position: relative;
-    background: rgba($lightColor, 1);
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row-reverse;
-    align-items: center;
-    padding: 0 20px;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    padding: 0;
-    height: 60px;
-    padding-top: 0;
-    padding-bottom: 0;
-    border-bottom: 1px solid #eee;
+  width: 100%;
+  // max-width: $desktop;
+  position: relative;
+  background: rgba($lightColor, 1);
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row-reverse;
+  align-items: center;
+  padding: 0 20px;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  padding: 0;
+  height: 60px;
+  padding-top: 0;
+  padding-bottom: 0;
+  border-bottom: 1px solid #eee;
 
-    @include media($tablet) {
-        flex-direction: row;
+  @include media($tablet) {
+    flex-direction: row;
 
-        height: 80px;
-        width: auto;
-        left: 0px;
-        right: 0px;
+    height: 80px;
+    width: auto;
+    left: 0px;
+    right: 0px;
+  }
+
+  @include media($desktop) {
+    z-index: 2;
+    height: 85px;
+    left: 0;
+    right: 0;
+    margin-top: 0;
+    nav {
+      position: absolute;
+      right: 0;
     }
-
-    @include media($desktop) {
-        z-index: 2;
-        height: 85px;
-        left: 0;
-        right: 0;
-        margin-top: 0;
-        nav {
-            position: absolute;
-            right: 0;
-        }
-    }
+  }
 }
 
 .site-logo {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    // border: 1px solid pink;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  // border: 1px solid pink;
 
+  @include media($tablet) {
+    top: 14px;
+    left: auto;
+    right: 20px;
+  }
+
+  @include media($desktop) {
+    top: 17px;
+    right: auto;
+    left: 20px;
+  }
+
+  .is--ipad & {
+  }
+
+  h1 {
+    margin: 0 !important;
+  }
+  img {
+    width: 120px;
+    height: auto;
+    transition: all 0.15s ease-in;
     @include media($tablet) {
-        top: 14px;
-        left: auto;
-        right: 20px;
+      width: 200px;
+      &:hover {
+        // width: 210px;
+      }
     }
-
     @include media($desktop) {
-        top: 17px;
-        right: auto;
-        left: 20px;
     }
-
-    .is--ipad & {
-    }
-
-    h1 {
-        margin: 0 !important;
-    }
-    img {
-        width: 120px;
-        height: auto;
-        transition: all 0.15s ease-in;
-        @include media($tablet) {
-            width: 200px;
-            &:hover {
-                // width: 210px;
-            }
-        }
-        @include media($desktop) {
-        }
-    }
+  }
 }
 
 .menu-trigger {
-    position: absolute;
-    left: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row-reverse;
-    height: 100%;
-    @include media($desktop) {
-        display: none;
+  position: absolute;
+  left: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row-reverse;
+  height: 100%;
+  @include media($desktop) {
+    display: none;
+  }
+  .hamburger {
+    width: 30px;
+    height: 2px;
+    border-radius: 20px;
+    background: $secondaryAlt;
+    display: block;
+    margin-bottom: 4px;
+    &:last-of-type {
+      margin-bottom: 0px;
     }
-    .hamburger {
-        width: 30px;
-        height: 2px;
-        border-radius: 20px;
-        background: $secondaryAlt;
+  }
+  i {
+    color: $secondaryAlt;
+    font-size: 27px;
+    display: none;
+  }
+  @include media($desktop) {
+    &.open {
+      .hamburger {
+        z-index: 9999;
+        display: none;
+      }
+      i {
+        color: #fff;
         display: block;
-        margin-bottom: 4px;
-        &:last-of-type {
-            margin-bottom: 0px;
-        }
+        position: fixed;
+        right: 20px;
+      }
     }
-    i {
-        color: $secondaryAlt;
-        font-size: 27px;
-        display: none;
+  }
+  > div {
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .touch-button-text {
+    margin-right: 15px;
+    display: none;
+    margin-top: 0px;
+    font-size: 20px;
+    font-weight: 100;
+    color: $darkColor;
+    text-transform: uppercase;
+    @include media(370px) {
+      display: block;
     }
-    @include media($desktop) {
-        &.open {
-            .hamburger {
-                z-index: 9999;
-                display: none;
-            }
-            i {
-                color: #fff;
-                display: block;
-                position: fixed;
-                right: 20px;
-            }
-        }
+    @include media($tablet) {
     }
-    > div {
-        align-items: center;
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-    .touch-button-text {
-        margin-right: 15px;
-        display: none;
-        margin-top: 0px;
-        font-size: 20px;
-        font-weight: 100;
-        color: $darkColor;
-        text-transform: uppercase;
-        @include media(370px) {
-            display: block;
-        }
-        @include media($tablet) {
-        }
-    }
+  }
 }
 
 a.show-form {
-    i {
-        color: #15cf1e !important;
-        font-weight: 900;
-    }
+  i {
+    color: #15cf1e !important;
+    font-weight: 900;
+  }
 }
 
 .get-social {
-    margin-left: 0px;
-    header & {
-        position: absolute;
-        right: 140px;
-        @include media($tablet) {
-            right: 225px;
-        }
-        @include media($desktop) {
-            display: none;
-        }
-        .is--ipad & {
-            right: 225px;
-        }
-    }
-    a {
-        margin: 0 5px;
-    }
-    a i {
-        position: relative;
-        transition: all 0.2s ease;
-        bottom: 0;
-        &.active {
-            bottom: 7px;
-        }
-        header & {
-            font-size: 25px;
-        }
-        color: $primaryAlt;
-        font-size: 35px;
-
-        &.fa-twitter {
-            color: #1da1f2;
-        }
-        &.fa-facebook {
-            color: #3b5998;
-        }
-    }
+  margin-left: 0px;
+  header & {
+    position: absolute;
+    right: 140px;
     @include media($tablet) {
-        display: inline-block;
-        position: relative;
-        display: block;
+      right: 225px;
     }
+    @include media($desktop) {
+      display: none;
+    }
+    .is--ipad & {
+      right: 225px;
+    }
+  }
+  a {
+    margin: 0 5px;
+  }
+  a i {
+    position: relative;
+    transition: all 0.2s ease;
+    bottom: 0;
+    &.active {
+      bottom: 7px;
+    }
+    header & {
+      font-size: 25px;
+    }
+    color: $primaryAlt;
+    font-size: 35px;
+
+    &.fa-twitter {
+      color: #1da1f2;
+    }
+    &.fa-facebook {
+      color: #3b5998;
+    }
+  }
+  @include media($tablet) {
+    display: inline-block;
+    position: relative;
+    display: block;
+  }
 }
 
 .header-images {
-    margin-top: 80px;
-    height: 120px;
-    background-size: cover;
-    background-position: bottom center;
-    background-repeat: no-repeat;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-bottom: 5px solid #000;
+  margin-top: 80px;
+  height: 120px;
+  background-size: cover;
+  background-position: bottom center;
+  background-repeat: no-repeat;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-bottom: 5px solid #000;
 
+  @include media($tablet) {
+    border-bottom: none;
+    background-size: cover;
+    height: 300px;
+  }
+  @include media(2000px) {
+    height: 400px;
+  }
+  h1 {
+    position: relative;
+    text-align: center;
+    font-family: $primaryFont;
+    font-size: 50px;
+    // font-weight: 900;
+    text-shadow: 2px 2px 0px $darkColor;
+    text-transform: uppercase;
     @include media($tablet) {
-        border-bottom: none;
-        background-size: cover;
-        height: 300px;
+      font-size: 70px;
+      line-height: 70px;
     }
-    @include media(2000px) {
-        height: 400px;
-    }
-    h1 {
-        position: relative;
-        text-align: center;
-        font-family: $primaryFont;
-        font-size: 50px;
-        // font-weight: 900;
-        text-shadow: 2px 2px 0px $darkColor;
-        text-transform: uppercase;
-        @include media($tablet) {
-            font-size: 70px;
-            line-height: 70px;
-        }
-    }
+  }
 }
 
 .header-images-new {
+  // border: 1px solid pink;
+  margin-top: 60px;
+  // height: 80px;
+  background-size: cover;
+  background-position: bottom center;
+  background-repeat: no-repeat;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #000;
+  border-bottom: 1px solid #eee;
+  min-height: 200px;
+  @include media($tablet) {
+    // height: 120px;
+    margin-top: 80px;
+    min-height: 400px;
+  }
+  @include media($desktop) {
     // border: 1px solid pink;
-    margin-top: 60px;
-    // height: 80px;
-    background-size: cover;
-    background-position: bottom center;
-    background-repeat: no-repeat;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #000;
-    border-bottom: 1px solid #eee;
-    min-height: 200px;
+  }
+  .tmpl_type_single &,
+  .tmpl_type_page & {
+    // height: 0px;
+  }
+  h1 {
+    position: relative;
+    text-align: center;
+    font-family: $primaryFont;
+    font-size: 30px;
+    font-weight: 100;
     @include media($tablet) {
-        // height: 120px;
-        margin-top: 80px;
-        min-height: 400px;
+      font-size: 50px;
+      line-height: 65px;
     }
-    @include media($desktop) {
-        // border: 1px solid pink;
-    }
-    .tmpl_type_single &,
-    .tmpl_type_page & {
-        // height: 0px;
-    }
-    h1 {
-        position: relative;
-        text-align: center;
-        font-family: $primaryFont;
-        font-size: 30px;
-        font-weight: 100;
-        @include media($tablet) {
-            font-size: 50px;
-            line-height: 65px;
-        }
-    }
+  }
 }
 
 /* Hide Heades on Homepage*/
 
 .home .header-images,
 .home .header-images-new {
-    display: none;
+  display: none;
 }
 
 .header-1 {
-    background: #000 url("images/header-1.jpg") center center no-repeat;
-    background-size: cover;
+  background: #000 url("images/header-1.jpg") center center no-repeat;
+  background-size: cover;
 }
 
 .header-2 {
-    background: #000 url("images/header-2.jpg") center center no-repeat;
-    background-size: cover;
+  background: #000 url("images/header-2.jpg") center center no-repeat;
+  background-size: cover;
 }
 .header-3 {
-    background: #000 url("images/header-3.jpg") center center no-repeat;
-    background-size: cover;
+  background: #000 url("images/header-3.jpg") center center no-repeat;
+  background-size: cover;
 }
 
 .header-4 {
-    background: #000 url("images/header-4.jpg") center center no-repeat;
-    background-size: cover;
+  background: #000 url("images/header-4.jpg") center center no-repeat;
+  background-size: cover;
 }
 
 .header-5 {
-    background: #000 url("images/header-5.jpg") center center no-repeat;
-    background-size: cover;
+  background: #000 url("images/header-5.jpg") center center no-repeat;
+  background-size: cover;
 }
 
 .header-6 {
-    background: #000 url("images/header-6.jpg") center center no-repeat;
-    background-size: cover;
+  background: #000 url("images/header-6.jpg") center center no-repeat;
+  background-size: cover;
 }
 .header-7 {
-    background: #000 url("images/header-7.jpg") center center no-repeat;
-    background-size: cover;
+  background: #000 url("images/header-7.jpg") center center no-repeat;
+  background-size: cover;
 }
 
 .header-8 {
-    background: #000 url("images/header-8.jpg") center center no-repeat;
-    background-size: cover;
+  background: #000 url("images/header-8.jpg") center center no-repeat;
+  background-size: cover;
 }
 
 .header-9 {
-    background: #000 url("images/header-9.jpg") center center no-repeat;
-    background-size: cover;
+  background: #000 url("images/header-9.jpg") center center no-repeat;
+  background-size: cover;
 }
 
 /* Social Media Overlay Feeds*/
 
 .social-feed {
-    // position: absolute;
+  // position: absolute;
+  position: fixed;
+  right: 9998px;
+  padding-top: 20px;
+  background: white;
+  z-index: 1000;
+  transition: opacity 0.2s ease;
+  opacity: 0;
+  display: none;
+  // border: 1px solid red;
+  // overflow: scroll;
+
+  &.active {
+    display: block;
+    right: 0px;
+    left: 0px;
+    bottom: 0px;
+    top: 40px;
+    opacity: 1;
+    @include media($tablet) {
+      top: 80px;
+    }
+    &.events {
+      .the-feed {
+        max-width: none;
+      }
+    }
+  }
+  .close-feed {
+    z-index: 9999;
     position: fixed;
-    right: 9998px;
-    padding-top: 20px;
-    background: white;
+    right: 3px;
+    top: 60px;
+    i {
+      font-weight: 100;
+      font-size: 30px;
+      color: rgba($darkColor, 0.3);
+    }
+  }
+  .the-feed {
+    position: relative;
     z-index: 1000;
-    transition: opacity 0.2s ease;
-    opacity: 0;
-    display: none;
+    overflow: scroll;
+    max-width: 600px;
+    margin: 0 auto;
+    margin-top: 0px;
+    height: 100%;
+
     // border: 1px solid red;
-    // overflow: scroll;
-
-    &.active {
-        display: block;
-        right: 0px;
-        left: 0px;
-        bottom: 0px;
-        top: 40px;
-        opacity: 1;
-        @include media($tablet) {
-            top: 80px;
-        }
-        &.events {
-            .the-feed {
-                max-width: none;
-            }
-        }
+    iframe {
+      width: 100%;
+      height: 100% !important;
     }
-    .close-feed {
-        z-index: 9999;
-        position: fixed;
-        right: 3px;
-        top: 60px;
-        i {
-            font-weight: 100;
-            font-size: 30px;
-            color: rgba($darkColor, 0.3);
-        }
-    }
-    .the-feed {
-        position: relative;
-        z-index: 1000;
-        overflow: scroll;
-        max-width: 600px;
-        margin: 0 auto;
-        margin-top: 0px;
-        height: 100%;
-
-        // border: 1px solid red;
-        iframe {
-            width: 100%;
-            height: 100% !important;
-        }
-    }
+  }
 }
 
 /* Laoding Icon for Iframes */
 
 .loadme {
-    position: absolute;
-    top: 100px;
-    left: calc(50% - 40px;);
-    .loader {
-        border: 10px solid #f3f3f3; /* Light grey */
-        border-top: 10px solid $secondaryAlt; /* hot pink */
-        border-radius: 50%;
-        width: 80px;
-        height: 80px;
-        animation: spin 2s linear infinite;
+  position: absolute;
+  top: 100px;
+  left: calc(50% - 40px;);
+  .loader {
+    border: 10px solid #f3f3f3; /* Light grey */
+    border-top: 10px solid $secondaryAlt; /* hot pink */
+    border-radius: 50%;
+    width: 80px;
+    height: 80px;
+    animation: spin 2s linear infinite;
+  }
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
     }
-    @keyframes spin {
-        0% {
-            transform: rotate(0deg);
-        }
-        100% {
-            transform: rotate(360deg);
-        }
+    100% {
+      transform: rotate(360deg);
     }
+  }
 }
